--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,10 @@ edition = "2021"
 
 [dependencies]
 minifb = "0.24"
-rand = "0.9.2"
+rand = "0.8"
 clap = { version = "4.4", features = ["derive"] }
+log = "0.4"
+env_logger = "0.10"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+chrono = { version = "0.4", features = ["serde"] }
